--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
-        "psr/simple-cache": "1.0"
+        "psr/simple-cache": "1.0",
+        "spatie/laravel-medialibrary": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
