--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,7 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "hirak/prestissimo": true
-        }
+        "sort-packages": true
     },
     "extra": {
         "laravel": {
